rollback cristian