@@ -3,6 +3,7 @@ package tpi_prog2.service;
 import tpi_prog2.dao.GenericDAO;
 import tpi_prog2.models.FichaBibliografica;
 
+import java.sql.Connection;
 import java.util.List;
 
 public class FichaBibliograficaServiceImpl implements GenericService<FichaBibliografica> {
@@ -10,12 +11,13 @@ public class FichaBibliograficaServiceImpl implements GenericService<FichaBiblio
     private final GenericDAO<FichaBibliografica> fichaDAO;
 
     public FichaBibliograficaServiceImpl(GenericDAO<FichaBibliografica> fichaDAO) {
-        if (fichaDAO == null) {
-            throw new IllegalArgumentException("FichaBibliograficaDAO no puede ser null");
-        }
+        if (fichaDAO == null) throw new IllegalArgumentException("FichaBibliograficaDAO no puede ser null");
         this.fichaDAO = fichaDAO;
     }
 
+    // -----------------------
+    // Métodos normales (sin Connection)
+    // -----------------------
     @Override
     public void insertar(FichaBibliografica ficha) throws Exception {
         validateFicha(ficha);
@@ -25,25 +27,36 @@ public class FichaBibliograficaServiceImpl implements GenericService<FichaBiblio
     @Override
     public void actualizar(FichaBibliografica ficha) throws Exception {
         validateFicha(ficha);
-        if (ficha.getId() <= 0) {
-            throw new IllegalArgumentException("El ID de la ficha debe ser mayor a 0 para actualizar");
-        }
+        if (ficha.getId() <= 0) throw new IllegalArgumentException("El ID debe ser mayor a 0 para actualizar");
         fichaDAO.actualizar(ficha);
     }
 
+    // -----------------------
+    // Métodos transaccionales (llamados desde LibroService con la misma Connection)
+    // -----------------------
+    public void insertar(FichaBibliografica ficha, Connection conn) throws Exception {
+        validateFicha(ficha);
+        fichaDAO.insertTransaccion(ficha, conn);
+    }
+
+    public void actualizar(FichaBibliografica ficha, Connection conn) throws Exception {
+        validateFicha(ficha);
+        if (ficha.getId() <= 0) throw new IllegalArgumentException("El ID debe ser mayor a 0 para actualizar");
+        fichaDAO.actualizarTransaccion(ficha, conn);
+    }
+
+    // -----------------------
+    // Resto del CRUD
+    // -----------------------
     @Override
     public void eliminar(int id) throws Exception {
-        if (id <= 0) {
-            throw new IllegalArgumentException("El ID debe ser mayor a 0");
-        }
+        if (id <= 0) throw new IllegalArgumentException("ID inválido");
         fichaDAO.eliminar(id);
     }
 
     @Override
     public FichaBibliografica getById(int id) throws Exception {
-        if (id <= 0) {
-            throw new IllegalArgumentException("El ID debe ser mayor a 0");
-        }
+        if (id <= 0) throw new IllegalArgumentException("ID inválido");
         return fichaDAO.getById(id);
     }
 
@@ -52,18 +65,14 @@ public class FichaBibliograficaServiceImpl implements GenericService<FichaBiblio
         return fichaDAO.getAll();
     }
 
+    // -----------------------
+    // Helpers
+    // -----------------------
     private void validateFicha(FichaBibliografica ficha) {
-        if (ficha == null) {
-            throw new IllegalArgumentException("La ficha bibliográfica no puede ser null");
-        }
-
-        if (ficha.getIsbn() == null || ficha.getIsbn().trim().isEmpty()) {
-            throw new IllegalArgumentException("El ISBN no puede estar vacío");
-        }
-
-        if (ficha.getIdioma() == null || ficha.getIdioma().trim().isEmpty()) {
-            throw new IllegalArgumentException("El idioma no puede estar vacío");
-        }
-
+        if (ficha == null) throw new IllegalArgumentException("Ficha null");
+        if (ficha.getIsbn() == null || ficha.getIsbn().isBlank())
+            throw new IllegalArgumentException("ISBN no puede estar vacío");
+        if (ficha.getIdioma() == null || ficha.getIdioma().isBlank())
+            throw new IllegalArgumentException("Idioma no puede estar vacío");
     }
 }
